// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component execute 1`] = `
"===========base===========
.css-1cwwvg5 {
  color: red;
  display: block;
  font-size: 36px;
  color: rgba(0, 0, 0, 1);
}

.css-1cwwvg5.css-1cwwvg5:hover {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

@media screen and (min-width: 52em) {
  .css-1cwwvg5.css-1cwwvg5:hover {
    -webkit-box-flex: 0;
    -webkit-flex-grow: 0;
    -ms-flex-positive: 0;
    flex-grow: 0;
  }
}

.css-1cwwvg5::before {
  color: rgba(0, 0, 0, 1);
}

@media screen and (min-width: 52em) {
  .css-1cwwvg5::before {
    color: #E6F6FF;
  }
}

@media screen and (min-width: 52em) {
  .css-1cwwvg5 {
    color: #E6F6FF;
  }
}

"
`;

exports[`Component execute 2`] = `
"===========base2===========
.css-1dxbwyp {
  color: red;
  display: inline;
  color: rgba(0, 0, 0, 0.04);
}

.css-1dxbwyp.css-1dxbwyp:hover.css-1dxbwyp.css-1dxbwyp:hover.css-1dxbwyp.css-1dxbwyp:hover.css-1dxbwyp.css-1dxbwyp:hover:disabled {
  font-size: 16px;
  display: inline;
  color: rgba(0, 0, 0, 0.04);
}

@media screen and (min-width: 52em) {
  .css-1dxbwyp.css-1dxbwyp:hover.css-1dxbwyp.css-1dxbwyp:hover.css-1dxbwyp.css-1dxbwyp:hover.css-1dxbwyp.css-1dxbwyp:hover:disabled {
    color: #FFEDEE;
  }
}

@media screen and (min-width: 52em) {
  .css-1dxbwyp {
    color: rgba(0, 0, 0, 0.04);
  }
}

"
`;

exports[`Component execute array 1`] = `
Object {
  "button": Object {
    "children": undefined,
    "childrenProps": undefined,
    "className": "css-ody2sg",
  },
}
`;

exports[`Component merge theme - all 1`] = `
Object {
  "Button": Object {
    "defaultProps": Object {
      "size": "m",
    },
    "mapProps": function (props) { return (__assign(__assign({}, a(props)), b(props))); },
    "slots": Object {
      "base": Object {
        "&::before": Object {
          "color": Array [
            "black",
            "blue50",
          ],
        },
        "as": "div",
        "asString": "color: red;",
        "color": Array [
          "primary",
          "red",
        ],
        "display": "flex",
        "fontSize": function (props) { return props.otherSize; },
        "hover": Object {
          "color": Array [
            "primary",
            "red",
          ],
          "display": "flex",
          "fontSize": function (props) { return props.otherSize; },
          "grow": Array [
            true,
            false,
          ],
        },
      },
      "base2": Object {
        "asString": "color: red;",
        "children": Object {
          "component": function (props) { return props.size === 'm' ? C1 : C; },
          "kind2": "fill",
        },
        "color": Array [
          "black4",
          "black4",
        ],
        "display": function (props) { return 'inline'; },
        "hover": Object {
          "disabled": Object {
            "color": Array [
              "black4",
              "red50",
            ],
            "display": Array [
              "inline",
            ],
            "fontSize": function (props) { return 'm'; },
          },
        },
      },
    },
  },
  "breakpoints": Array [
    "40em",
    "52em",
    "64em",
    "80em",
  ],
  "dimension": Object {
    "borderRadius": Object {
      "l": 5,
      "m": 3,
      "s": 1,
    },
    "rowHeight": Object {
      "l": 48,
      "m": 36,
      "s": 28,
    },
  },
  "focus": "white 0px 0px 0px 1px, 0px 0px 2px 3px black",
  "font": Object {
    "fontSize": Object {
      "l": 22,
      "m": 16,
      "s": 13,
      "xl": 26,
      "xs": 11,
      "xxl": 36,
      "xxxl": 0,
      "xxxxl": 0,
      "xxxxxl": 0,
    },
    "lineHeight": Object {
      "dense": 1.25,
      "none": 1.12,
      "normal": 1.375,
    },
  },
  "opacity": Object {
    "minLevel": 0,
    "op1": 1,
  },
  "palette": Object {
    "black": "rgba(0, 0, 0, 1)",
    "black12": "rgba(0, 0, 0, 0.12)",
    "black4": "rgba(0, 0, 0, 0.04)",
    "black8": "rgba(0, 0, 0, 0.08)",
    "blue100": "#CCECFF",
    "blue200": "#A1DFFF",
    "blue300": "#80D4FF",
    "blue50": "#E6F6FF",
    "gray12": "#E0E0E0",
    "gray16": "#D6D6D6",
    "gray4": "#F5F5F5",
    "gray8": "#EBEBEB",
    "gray96": "#0a0a0a",
    "green100": "#EEF7DC",
    "green200": "#CBE792",
    "green300": "#C1E27E",
    "green50": "#EEF7DC",
    "orange100": "#FFE7BA",
    "orange200": "#FFD78F",
    "orange300": "#FFE27A",
    "orange50": "#FFF5E2",
    "purple100": "#F0E7FE",
    "purple200": "#DAC5FB",
    "purple300": "#CAACFA",
    "purple50": "#F3EDFE",
    "red100": "#FFE6E6",
    "red200": "#FFC5C6",
    "red300": "#FFACAD",
    "red50": "#FFEDEE",
    "white": "#FFFFFF",
    "yellow100": "#fff3d9",
    "yellow200": "#ffe5b2",
    "yellow300": "#ffd173",
    "yellow50": "#fff9ec",
  },
  "shadow": Object {
    "1": "1",
    "2": "2",
    "3": "3",
    "4": "4",
  },
  "space": Object {
    "l": 20,
    "m": 16,
    "s": 12,
    "xl": 24,
    "xs": 8,
    "xxl": 32,
    "xxs": 4,
    "xxxl": 40,
    "xxxs": 2,
  },
  "text": Object {
    "h1": Object {
      "fontSize": 12,
      "lineHeight": 1.5,
    },
    "h2": Object {
      "fontSize": 15,
      "lineHeight": 1.7,
    },
  },
  "transition": Object {
    "fade": "",
  },
  "zIndex": Object {
    "dropdown": 1,
    "popup": 1,
    "tooltip": 1,
  },
}
`;

exports[`Component merge theme - none 1`] = `
Object {
  "Button": Object {
    "defaultProps": Object {
      "size": "s",
    },
    "mapProps": function (props) { return ({
    size: 'm',
}); },
    "slots": Object {
      "base": Object {
        "&::before": Object {
          "color": Array [
            "black",
            "blue50",
          ],
        },
        "asString": "color: red;",
        "color": Array [
          "black",
          "blue50",
        ],
        "display": function (props) { return 'block'; },
        "fontSize": "xxl",
        "hover": Object {
          "grow": Array [
            true,
            false,
          ],
        },
      },
      "base2": Object {
        "asString": "color: red;",
        "children": Object {
          "component": function (props) { return props.size === 'm' ? C1 : C; },
          "kind2": "fill",
        },
        "color": Array [
          "black4",
          "black4",
        ],
        "display": function (props) { return 'inline'; },
        "hover": Object {
          "disabled": Object {
            "color": Array [
              "black4",
              "red50",
            ],
            "display": Array [
              "inline",
            ],
            "fontSize": function (props) { return 'm'; },
          },
        },
      },
    },
  },
  "breakpoints": Array [
    "40em",
    "52em",
    "64em",
    "80em",
  ],
  "dimension": Object {
    "borderRadius": Object {
      "l": 5,
      "m": 3,
      "s": 1,
    },
    "rowHeight": Object {
      "l": 48,
      "m": 36,
      "s": 28,
    },
  },
  "focus": "white 0px 0px 0px 1px, 0px 0px 2px 3px black",
  "font": Object {
    "fontSize": Object {
      "l": 22,
      "m": 16,
      "s": 13,
      "xl": 26,
      "xs": 11,
      "xxl": 36,
      "xxxl": 0,
      "xxxxl": 0,
      "xxxxxl": 0,
    },
    "lineHeight": Object {
      "dense": 1.25,
      "none": 1.12,
      "normal": 1.375,
    },
  },
  "opacity": Object {
    "minLevel": 0,
    "op1": 1,
  },
  "palette": Object {
    "black": "rgba(0, 0, 0, 1)",
    "black12": "rgba(0, 0, 0, 0.12)",
    "black4": "rgba(0, 0, 0, 0.04)",
    "black8": "rgba(0, 0, 0, 0.08)",
    "blue100": "#CCECFF",
    "blue200": "#A1DFFF",
    "blue300": "#80D4FF",
    "blue50": "#E6F6FF",
    "gray12": "#E0E0E0",
    "gray16": "#D6D6D6",
    "gray4": "#F5F5F5",
    "gray8": "#EBEBEB",
    "gray96": "#0a0a0a",
    "green100": "#EEF7DC",
    "green200": "#CBE792",
    "green300": "#C1E27E",
    "green50": "#EEF7DC",
    "orange100": "#FFE7BA",
    "orange200": "#FFD78F",
    "orange300": "#FFE27A",
    "orange50": "#FFF5E2",
    "purple100": "#F0E7FE",
    "purple200": "#DAC5FB",
    "purple300": "#CAACFA",
    "purple50": "#F3EDFE",
    "red100": "#FFE6E6",
    "red200": "#FFC5C6",
    "red300": "#FFACAD",
    "red50": "#FFEDEE",
    "white": "#FFFFFF",
    "yellow100": "#fff3d9",
    "yellow200": "#ffe5b2",
    "yellow300": "#ffd173",
    "yellow50": "#fff9ec",
  },
  "shadow": Object {
    "1": "1",
    "2": "2",
    "3": "3",
    "4": "4",
  },
  "space": Object {
    "l": 20,
    "m": 16,
    "s": 12,
    "xl": 24,
    "xs": 8,
    "xxl": 32,
    "xxs": 4,
    "xxxl": 40,
    "xxxs": 2,
  },
  "text": Object {
    "h1": Object {
      "fontSize": 12,
      "lineHeight": 1.5,
    },
    "h2": Object {
      "fontSize": 15,
      "lineHeight": 1.7,
    },
  },
  "transition": Object {
    "fade": "",
  },
  "zIndex": Object {
    "dropdown": 1,
    "popup": 1,
    "tooltip": 1,
  },
}
`;

exports[`Component merge theme - undefined 1`] = `
Object {
  "Button": Object {
    "slots": Object {
      "base": Object {
        "&::before": Object {
          "color": Array [
            "black",
            "blue50",
          ],
        },
        "as": "div",
        "asString": "color: red;",
        "hover": Object {
          "grow": Array [
            true,
            false,
          ],
        },
      },
      "base2": Object {
        "asString": "color: red;",
        "children": Object {
          "component": function (props) { return props.size === 'm' ? C1 : C; },
          "kind2": "fill",
        },
        "color": Array [
          "black4",
          "black4",
        ],
        "display": function (props) { return 'inline'; },
        "hover": Object {
          "disabled": Object {
            "color": Array [
              "black4",
              "red50",
            ],
            "display": Array [
              "inline",
            ],
            "fontSize": function (props) { return 'm'; },
          },
        },
      },
    },
  },
  "breakpoints": Array [
    "40em",
    "52em",
    "64em",
    "80em",
  ],
  "dimension": Object {
    "borderRadius": Object {
      "l": 5,
      "m": 3,
      "s": 1,
    },
    "rowHeight": Object {
      "l": 48,
      "m": 36,
      "s": 28,
    },
  },
  "focus": "white 0px 0px 0px 1px, 0px 0px 2px 3px black",
  "font": Object {
    "fontSize": Object {
      "l": 22,
      "m": 16,
      "s": 13,
      "xl": 26,
      "xs": 11,
      "xxl": 36,
      "xxxl": 0,
      "xxxxl": 0,
      "xxxxxl": 0,
    },
    "lineHeight": Object {
      "dense": 1.25,
      "none": 1.12,
      "normal": 1.375,
    },
  },
  "opacity": Object {
    "minLevel": 0,
    "op1": 1,
  },
  "palette": Object {
    "black": "rgba(0, 0, 0, 1)",
    "black12": "rgba(0, 0, 0, 0.12)",
    "black4": "rgba(0, 0, 0, 0.04)",
    "black8": "rgba(0, 0, 0, 0.08)",
    "blue100": "#CCECFF",
    "blue200": "#A1DFFF",
    "blue300": "#80D4FF",
    "blue50": "#E6F6FF",
    "gray12": "#E0E0E0",
    "gray16": "#D6D6D6",
    "gray4": "#F5F5F5",
    "gray8": "#EBEBEB",
    "gray96": "#0a0a0a",
    "green100": "#EEF7DC",
    "green200": "#CBE792",
    "green300": "#C1E27E",
    "green50": "#EEF7DC",
    "orange100": "#FFE7BA",
    "orange200": "#FFD78F",
    "orange300": "#FFE27A",
    "orange50": "#FFF5E2",
    "purple100": "#F0E7FE",
    "purple200": "#DAC5FB",
    "purple300": "#CAACFA",
    "purple50": "#F3EDFE",
    "red100": "#FFE6E6",
    "red200": "#FFC5C6",
    "red300": "#FFACAD",
    "red50": "#FFEDEE",
    "white": "#FFFFFF",
    "yellow100": "#fff3d9",
    "yellow200": "#ffe5b2",
    "yellow300": "#ffd173",
    "yellow50": "#fff9ec",
  },
  "shadow": Object {
    "1": "1",
    "2": "2",
    "3": "3",
    "4": "4",
  },
  "space": Object {
    "l": 20,
    "m": 16,
    "s": 12,
    "xl": 24,
    "xs": 8,
    "xxl": 32,
    "xxs": 4,
    "xxxl": 40,
    "xxxs": 2,
  },
  "text": Object {
    "h1": Object {
      "fontSize": 12,
      "lineHeight": 1.5,
    },
    "h2": Object {
      "fontSize": 15,
      "lineHeight": 1.7,
    },
  },
  "transition": Object {
    "fade": "",
  },
  "zIndex": Object {
    "dropdown": 1,
    "popup": 1,
    "tooltip": 1,
  },
}
`;
